--- a/src/c/CudaPy3DLL.vcxproj
+++ b/src/c/CudaPy3DLL.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Python\hip_module.cpp" />
     <ClCompile Include="Python\PyCommandModule.cpp" />
+    <ClCompile Include="ScriptCmds\ScopedProcessMutex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mph\const_string.h" />
@@ -55,6 +56,7 @@
     <ClInclude Include="ScriptCmds\Commands\ScrCmdVarFilter.h" />
     <ClInclude Include="ScriptCmds\Commands\ScrCmdWienerFilter.h" />
     <ClInclude Include="ScriptCmds\GenCommands.h" />
+    <ClInclude Include="ScriptCmds\ScopedProcessMutex.h" />
     <ClInclude Include="ScriptCmds\ScriptCommand.h" />
     <ClInclude Include="ScriptCmds\ScriptCommandDefines.h" />
     <ClInclude Include="ScriptCmds\ScriptCommandModule.h" />
@@ -168,7 +170,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>PY_BUILD;_DEBUG;_WINDOWS;_USRDLL;CUDAPY3DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>PY_BUILD;USE_PROCESS_MUTEX;_DEBUG;_WINDOWS;_USRDLL;CUDAPY3DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>.;external;Python;$(PYTHON3_DIR)/include;$(NUMPY3_DIR)/core/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
@@ -208,7 +210,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>PY_BUILD;NDEBUG;_WINDOWS;_USRDLL;CUDAPY3DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>PY_BUILD;USE_PROCESS_MUTEX;NDEBUG;_WINDOWS;_USRDLL;CUDAPY3DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>.;external;Python;$(PYTHON3_DIR)/include;$(NUMPY3_DIR)/core/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
