Parameter traits use transforms and predicates rather than internal properties

--- a/src/c/CudaPy3DLL.vcxproj
+++ b/src/c/CudaPy3DLL.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="WrapCmds\ScriptHelpers.h" />
     <ClInclude Include="WrapCmds\CommandList.h" />
     <ClInclude Include="WrapCmds\ScriptTraits.h" />
+    <ClInclude Include="WrapCmds\ScriptTraitTfms.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
