--- a/src/c/CudaPy3DLL.vcxproj
+++ b/src/c/CudaPy3DLL.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="Python\PyWrapDef.h" />
     <ClInclude Include="WrapCmds\ArgParser.h" />
     <ClInclude Include="WrapCmds\GenCommands.h" />
+    <ClInclude Include="WrapCmds\LinkageTraitTfms.h" />
     <ClInclude Include="WrapCmds\PyConverters.h" />
     <ClInclude Include="WrapCmds\ScriptCommand.h" />
     <ClInclude Include="WrapCmds\ScriptCommands.h" />
