--- a/src/c/CudaImageProcessor.vcxproj.filters
+++ b/src/c/CudaImageProcessor.vcxproj.filters
@@ -158,6 +158,9 @@
     <ClInclude Include="Cuda\ImageView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CWrapperAutogen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Cuda\ImageDimensions.cuh">
@@ -178,6 +181,9 @@
       <Filter>Source Files</Filter>
     </CudaCompile>
     <CudaCompile Include="Cuda\KernelIterator.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Cuda\CWrapperAutogen.cu">
       <Filter>Source Files</Filter>
     </CudaCompile>
   </ItemGroup>
